calibre/calibre.service.yml
apiVersion: v1
kind: Service
metadata:
  name: calibre
  namespace: calibre
spec:
  selector:
    app: calibre
  ports:
    - name: http
      port: 8083
      targetPort: http
  type: ClusterIP
